--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "4.0.2"
+    "react-scripts": "4.0.2",
+    "react-icons": "^4.3.1",
+    "react-tooltip": "^4.2.21"
   },
   "scripts": {
     "start": "react-scripts start",
